Fix ClassNewInstance errors